--- a/index.html
+++ b/index.html
@@ -10,15 +10,14 @@
   </head>
   <body>
     <div class="greetings">
-      <span>H</span>
-      <span>A</span>
-      <span>S</span>
-      <span>N</span>
-      <span>A</span>
+      <span>D</span>
+      <span>W</span>
+      <span>I</span>
+      <span>I</span>
     </div>
 
     <div class="description">
-      <span>Selamat Ulang Tahun🥳</span>
+      <span>Ada Sesuatu Buat lu wi</span>
     </div>
     <div class="button">
       <button>
